# inventory_app_rust

./: .dockerignore  Cargo.toml  Dockerfile  sqlite.sqlite3  sqlite.sqlite3-shm  sqlite.sqlite3-wal
src/: main.rs
src/itemcategory/: forms.rs  mod.rs  models.rs  views.rs
src/orm/: utils.rs
templates/: index.html
templates/base/: base.html
templates/itemcategory/: index.html
templates/itemcategory/partials/: table_row.html
