[package]
name = "inventory_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
serde = { version = "1.0.193", features = ["derive"] }
tera = "1.19.1"
tokio = { version = "1.35.1", features = ["full"] }
